# Tik

./: .gitignore  CLAUDE.md  HISTORIQUE.md  LICENSE  README.md  go_no_go_report.sh  redeploy.sh
.github/workflows/: ci.yml
core/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
core/data/golden_dataset/: annotations.jsonl  calibration_report.json  calibration_report.md  glossaire-news-fr.md  predictions.jsonl  prices.jsonl  raw_items.jsonl
core/data/numeric_calibration/: numeric_calibration_report.json  numeric_calibration_report.md
core/migrations/: env.py
core/migrations/init/: 00_extensions.sql
core/migrations/versions/: 20260420_0000_0001_initial.py  20260429_0000_0002_backtest_runs.py  20260503_0000_0003_source_credibility_history.py  20260505_0000_0004_headlines.py  20260506_0000_0005_macro_events.py  20260603_0000_0006_manual_trades.py
core/src/tik_core/: __init__.py  config.py  main.py
core/src/tik_core/adapters/: __init__.py  base.py  trading.py
core/src/tik_core/aggregator/: __init__.py  _pyfedwatch_compat.py  base.py  binance_derivatives_ingester.py  binance_ingester.py  breaking_news_ingester.py  btc_etf_flows_ingester.py  cftc_cot_ingester.py  coingecko_sentiment_ingester.py  cross_asset_ingester.py  cryptocompare_ingester.py  fear_greed_ingester.py  fred_calendar_ingester.py  fred_ingester.py  gdelt_ingester.py  google_news_ingester.py  macro_calendar_data.py  macro_mechanisms.py  macro_regime_ingester.py  macro_static_ingester.py  news_classifier.py  polymarket_ingester.py  rate_probabilities_ingester.py  reddit_ingester.py  stablecoins_ingester.py  tradingview_ta_ingester.py  yahoo_ingester.py
core/src/tik_core/api/: __init__.py  derivatives.py  entities.py  feedback.py  headlines.py  health.py  macro.py  macro_events.py  macro_reading.py  manual_trades.py  metrics.py  polymarket.py  signals.py  tradingview.py  veracity.py  ws.py
core/src/tik_core/auth/: __init__.py  api_key.py  dependencies.py  provider.py
core/src/tik_core/metrics/: freshness.py  hit_rate.py  signal_track_record.py  source_health.py
core/src/tik_core/ml/: __init__.py
core/src/tik_core/notify/: __init__.py  alerts.py  briefing.py  telegram.py
core/src/tik_core/scoring/: __init__.py  anomaly_detector.py  cross_validator.py  flash_engine.py  hypothesis_generator.py  indicators.py  macro_proximity.py  publisher.py  source_credibility.py  swing_engine.py
core/src/tik_core/scripts/: __init__.py  analyze_colinearity.py  annotate_golden.py  archive_forexfactory.py  backtest.py  backtest_dual_lens.py  backtest_flash.py  backtest_golden.py  backtest_numeric_sources.py  collect_golden.py  create_api_key.py  fetch_numeric_history.py  measure_anomaly_thresholds.py  measure_btc_derivatives.py  measure_btc_etf_flows.py  measure_calibration.py  measure_coingecko_divergence.py  measure_coingecko_predictive.py  measure_forexfactory_surprise.py  measure_macro_predictive.py  measure_macro_reaction.py  measure_paxg_gold_tracking.py  measure_polymarket.py  measure_post_fix_hit_rates.py  measure_veracity_dispersion.py  predict_golden.py  reset_source_credibility.py  run_ingesters.py  run_scheduler.py
core/src/tik_core/storage/: __init__.py  database.py  headlines_repo.py  macro_events_repo.py  manual_trades_repo.py  models.py  schemas.py
core/src/tik_core/utils/: __init__.py  time.py
core/tests/: conftest.py  test_alerts.py  test_anomaly_detector.py  test_auth.py  test_backtest.py  test_backtest_flash.py  test_backtest_numeric_sources.py  test_binance_derivatives_ingester.py  test_breaking_news_api.py  test_breaking_news_ingester.py  test_briefing.py  test_briefing_derivatives.py  test_btc_etf_flows_ingester.py  test_cftc_cot_ingester.py  test_coingecko_sentiment_ingester.py  test_cross_asset.py  test_cross_validator.py  test_cryptocompare_ingester.py  test_derivatives_api.py  test_expected_amplitude.py  test_feedback_api.py  test_fetch_numeric_history.py  test_flash_engine.py  test_fred_calendar_ingester.py  test_gdelt_ingester.py  test_golden_pipeline.py  test_google_news_ingester.py  test_headlines_api.py  test_headlines_repo.py  test_health.py  test_hypothesis_generator.py  test_ingest_micro.py  test_macro_calendar_data.py  test_macro_events_api.py  test_macro_events_repo.py  test_macro_events_repo_db.py  test_macro_mechanisms.py  test_macro_proximity.py  test_macro_proximity_db.py  test_macro_reading_api.py  (+31 more)
dashboard/: README.md  app.json  package-lock.json  package.json
dashboard/app/: _layout.tsx  cosmique.tsx  login.tsx  macro-cosmique.tsx  observatoire.tsx  sources.tsx
dashboard/constants/: cosmic.ts  theme.ts
dashboard/hooks/: use-color-scheme.ts  use-color-scheme.web.ts
dashboard/src/: glossary.ts
docs/: GITHUB_SETUP.md  audit-2026-06-24.md  audit-dual-lens-2026-05-20.md  audit-etats-indisponibles-2026-06-24.md  audit-fiabilite-2026-06-26.md  audit-ux-2026-05-17.md  backlog-osint.md  backlog.md  comprendre_tik.md  hosting-and-app-options.md  integration_zeta.md  manuel_trading.md  plan-fusion-micro-breakout.md  post-mac-recovery-checklist.md  recherche-carry-funding.md  refonte-cosmique-handoff.md
docs/adr/: 001-auth-pluggable.md  002-monorepo.md  003-zeta-integration.md  004-multi-overlay-architecture.md  005-flash-engine.md  006-nlp-ollama-classifier.md  007-sdk-architecture.md  008-multi-asset-news-overlays.md  009-reddit-sentiment.md  010-gdelt-tone-overlay-gold.md  011-anti-fake-news.md  012-llm-hypothesis-generator.md  013-timezone-aware-datetimes.md  (+19 more)
sdk/: README.md  pyproject.toml  tik.example.yaml
sdk/examples/: 01_basic_read.py  02_streaming_with_hooks.py  03_zeta_overlay.py  04_full_resilience.py  README.md
sdk/src/tik_sdk/: __init__.py  _http.py  _ws.py  auth.py  cache.py  circuit_breaker.py  client.py  config.py  exceptions.py  feedback.py  hooks.py  models.py  stream.py
sdk/tests/: conftest.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_config.py  test_fallback.py  test_feedback.py  test_hooks.py  test_http.py  test_models.py  test_stream.py  test_ws.py
(+125 files in other folders)
