[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tik-core"
version = "0.1.0"
description = "Tik — moteur OSINT modulaire (core)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Tik" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "websockets>=13.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.4",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "ipython>=8.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM", "ARG"]
# Règles relaxées (cf. Paquet 31 backlog #12) :
# - E501 : longueur de ligne (historique).
# - SIM103/108/105 : préférences stylistiques (le code privilégie les formes
#   explicites — try/except commentés, if/else lisibles — pour un projet
#   maintenu par une débutante).
# - B027 : méthode vide sans @abstractmethod = pattern Strategy voulu
#   (NewsClassifier / HypothesisGenerator ont des défauts no-op légitimes).
# - UP042 : str-enum → StrEnum, modernisation différée (évite de toucher aux
#   définitions d'enum pré-trading).
ignore = ["E501", "SIM103", "SIM108", "SIM105", "B027", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# B008 : `Depends(...)`/`Query(...)` en argument par défaut est le pattern
# d'injection de dépendances idiomatique de FastAPI, pas un bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.Cookie",
    "fastapi.File",
    # Factory de dépendance d'auth maison : `Depends(require_scope("..."))`
    # est le pattern de contrôle de scope idiomatique (retourne une dépendance
    # fraîche), pas un bug d'argument par défaut mutable.
    "tik_core.auth.require_scope",
    "tik_core.auth.dependencies.require_scope",
]

[tool.ruff.lint.per-file-ignores]
# Les tests utilisent des helpers/fixtures avec args non utilisés (ARG),
# des classes/méthodes helper dont le 1er arg n'est pas `self` (N805), et
# des imports après setup d'env (E402, ex. conftest). Bruit hors-sujet en test.
"tests/**" = ["ARG001", "ARG002", "N805", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# pytest-asyncio >= 1.0 : verrouille le scope de boucle des fixtures async sur
# "function" (toutes les fixtures async du conftest sont function-scoped). Évite
# le mismatch de boucle qui faisait planter les fixtures DB session-scoped
# (cf. conftest.db_engine + CLAUDE.md section 9 Bug 9 régression guards).
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tik_core"]
mypy_path = "src"
