[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tik-sdk"
version = "0.6.0"
description = "Tik SDK — client Python pour consommer les signaux du core Tik (Paquet 2)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Tik" }]

# Deps :
#   httpx       — HTTP async (Session 1)
#   websockets  — WebSocket async (Session 2 — même version que le core)
#   pydantic    — validation des modèles miroirs des schémas core
#   structlog   — logging cohérent avec le core
#   pyyaml      — config YAML hot-reloadable (Session 4 — même version que le core)
# Cache + circuit breaker (Session 3) sont en stdlib pure, pas de dep externe.
# `redis` viendra plus tard via extras `[redis]` quand on aura besoin de
# partager le cache entre processus.
dependencies = [
    "httpx>=0.27.0",
    "websockets>=13.1",
    "pydantic>=2.8.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM", "ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tik_sdk"]
mypy_path = "src"
